[gd_scene load_steps=3 format=3 uid="uid://ch6u886b4lq5q"]

[ext_resource type="Script" uid="uid://c7ndje0wex4uk" path="res://ui/pause_menu/pause_menu.gd" id="1_jbgdu"]
[ext_resource type="PackedScene" uid="uid://dowdno32gmu8s" path="res://autoload/background.tscn" id="1_mnjdh"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_jbgdu")

[node name="Background" parent="." instance=ExtResource("1_mnjdh")]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit to Menu"
